[Editorial] Amoor -> Amur

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -12,6 +12,9 @@
                 <li id="note-1" epub:type="endnote">
                     <p>The verst contains 1,165 yards. <a href="chapter-1-2.xhtml#noteref-1" epub:type="backlink">↩</a></p>
                 </li>
+                <li id="note-2" epub:type="endnote">
+                    <p>The rouble (silver) is worth 3<abbr>s.</abbr> 2<abbr>d.</abbr> The kopeck (copper) rather more than a farthing. <a href="chapter-1-2.xhtml#noteref-2" epub:type="backlink">↩</a></p>
+                </li>
             </ol>
         </section>
     </body>
