--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -15,6 +15,9 @@
                 <li id="note-2" epub:type="endnote">
                     <p>The rouble (silver) is worth 3<abbr>s.</abbr> 2<abbr>d.</abbr> The kopeck (copper) rather more than a farthing. <a href="chapter-1-2.xhtml#noteref-2" epub:type="backlink">↩</a></p>
                 </li>
+                <li id="note-3" epub:type="endnote">
+                    <p>A kind of light cake.    <a href="chapter-1-5.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+                </li>
             </ol>
         </section>
     </body>
