[Editorial] Tsiganes -> Tziganes

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -16,7 +16,10 @@
                     <p>The rouble (silver) is worth 3<abbr>s.</abbr> 2<abbr>d.</abbr> The kopeck (copper) rather more than a farthing. <a href="chapter-1-2.xhtml#noteref-2" epub:type="backlink">↩</a></p>
                 </li>
                 <li id="note-3" epub:type="endnote">
-                    <p>A kind of light cake.    <a href="chapter-1-5.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+                    <p>A kind of light cake. <a href="chapter-1-5.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+                </li>
+                <li id="note-4" epub:type="endnote">
+                    <p>About £15,720,000 sterling. <a href="chapter-1-5.xhtml#noteref-4" epub:type="backlink">↩</a></p>
                 </li>
             </ol>
         </section>
