--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -21,6 +21,9 @@
                 <li id="note-4" epub:type="endnote">
                     <p>About £15,720,000 sterling. <a href="chapter-1-5.xhtml#noteref-4" epub:type="backlink">↩</a></p>
                 </li>
+                <li id="note-5" epub:type="endnote">
+                    <p>This coat is called a <i xml:lang="ru">dakha</i>; it is very light, and yet almost impervious to the cold. <a href="chapter-1-9.xhtml#noteref-5" epub:type="backlink">↩</a></p>
+                </li>
             </ol>
         </section>
     </body>
